# CrimeLens

./: .catalystrc  .gitignore  catalyst.json  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  README.md  app-config.json  index.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  synthetic.py
backend/app/db/: session.py
backend/app/domain/interfaces/: data_source.py  graph_repository.py
backend/app/domain/knowledge_graph/: KNOWLEDGE_GRAPH_SPEC.md  builder.py  serializer.py
backend/app/domain/models/: ingested_case.py  (+1 more)
backend/app/models/: copilot.py  fir.py  normalized.py
backend/app/schemas/: draft.py
backend/app/services/: copilot_processor.py  spatial.py
backend/configs/: confidence.yaml  retrieval.yaml  similarity.yaml
backend/configs/models/: registry.yaml
backend/scripts/: run_model_benchmark.py
backend/tests/: conftest.py
backend/tests/integration/: test_analysis_api.py  test_cases_and_network_api.py  test_end_to_end_integration.py  test_health_api.py  test_main_api.py
backend/tests/unit/: test_config.py  test_crime_analysis_pipeline.py  test_crime_intelligence.py  test_crime_signature_pipeline.py  test_crime_signature_v2.py  test_embedding_engine.py  test_evaluation.py  test_exceptions.py  test_knowledge_graph.py  test_pipeline_stabilization.py  test_signature_builder_v2.py  test_similarity_engine.py  test_vector_retrieval.py
(+235 files in other folders)
